@@ -1,3 +1,8 @@
+2022-03-31 Riccardo Mottola <rm@gnu.org>
+
+	* Source/GSStandardWindowDecorationView.m:
+	Fix resizing mode by fixing initialization order.
+
 2022-03-29 Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Headers/Additions/GNUstepGUI/GSXibKeyedUnarchiver.h
